--- a/app/views/repositories/index.html.erb
+++ b/app/views/repositories/index.html.erb
@@ -6,7 +6,7 @@
 
   <%= form_tag("/repositories/create", method: "post") do %>
     <%= label_tag(:name, "Create a New Repo:") %>
-    <%= text_field_tag(:name) %>
+    <%= text_field_tag(:name, nil, id: "new-repo") %>
     <%= submit_tag("Create") %>
   <% end %>
 </div>
