--- a/app/views/repositories/index.html.erb
+++ b/app/views/repositories/index.html.erb
@@ -1,8 +1,6 @@
 <div class = "container">
-  <h1><%= session[:username] %>'s Repos</h1>
-  <% @response_array.each do |response| %>
-    <%= link_to response["name"], response["html_url"] %><br>
-  <% end %><br>
+  <h1>Repos</h1>
+  <!-- List repositories here! -->
 
   <%= form_tag("/repositories/create", method: "post") do %>
     <%= label_tag(:name, "Create a New Repo:") %>
